fixed resizing on smaller screens

--- a/projects/js/bubbles/bubbles.css
+++ b/projects/js/bubbles/bubbles.css
@@ -6,7 +6,7 @@
     margin-right: 20px;
     margin-bottom: 20px;
     float: left;
-    width: 100%;
+    max-width: 100%;
 }
 
 .control {
